Fix description overflow
First shot, a better fix will involve narrowing other columns

--- a/src/app/shared/components/global-option-type-table/global-option-type-table.component.scss
+++ b/src/app/shared/components/global-option-type-table/global-option-type-table.component.scss
@@ -4,3 +4,10 @@
   display: flex;
   gap: $padding-small;
 }
+
+.description-overflow {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: break-word;
+
+}
